# synth_mapping_helper

./: .gitignore  LICENSE  MANIFEST.in  README.md  hook-plotly.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yml  test.yml  zizmor.yml
example_scripts/: README.md  backwards_map.py  box_of_squares.py  directional_spike_rail.py  easing.py  offset_everything.py  rescale_file_bpm.py  rotate_existing_walls.py  sine_rails.py  sine_sway.py  sphere_of_squares.py  spiral_existing.py  strict_rounding.py
src/synth_mapping_helper/: __init__.py  analysis.py  audio_format.py  cli.py  companion.py  finalize.py  gui.py  movement.py  pattern_generation.py  rails.py  synth_format.py  utils.py
src/synth_mapping_helper/gui_tabs/: autobackup.py  commands.py  dashboard.py  file_utils.py  local_dir_picker.py  map_render.py  merge.py  prevent_default_keyboard.js  stacking.py  text_gen.py  utils.py  version.py  wall_art.py
tests/: test_synth_format.py
windows_helpers/: autostack_circular.smh  autostack_linear.smh  autostack_spiral_walls.txt  example_rotate.txt  export_walls.smh  export_walls.txt  export_walls_undo.smh  export_walls_undo.txt  install.bat  merge_rails.smh  merge_rails.txt  oops_all_rails.smh  oops_all_rails.txt  open_gui_beta.bat  parallels.smh  parallels.txt  rail_to_notestack.txt  randomized_decorative_wallart.txt  show_help.bat  smh.bat  smh_companion.bat  smh_gui.bat  spikify.txt  spiralize.txt  split_rails.smh  split_rails.txt  stack_outwards_spiral.smh  stack_outwards_spiral.txt  stack_with_green_rail.smh  stack_with_green_rail.txt  to_120_bpm.smh  to_120_bpm.txt
